# django_react_admin

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
demo/: django_react_admin  requirements.txt  run.sh
demo/demo/: settings.py  urls.py
django_react_admin/: forms.py  metadata.py  urls.py  utils.py  views.py
django_react_admin/management/commands/: build_react_admin.py  generate_vue_form.py  start_frontend.py
django_react_admin/src/: package.json
django_react_admin/src/src/: App.js
django_react_admin/templates/django_react_admin/: index.html
django_vue_admin/: urls.py  views.py
django_vue_admin/templates/django_vue_admin/: base.html  edit.html  list.html
old/django_react_admin/: base.html  edit.html  index.html  list.html
tests/: test_django_vue_admin.py
