[tool.poetry]
name = "django_react_admin"
version = "0.1.1"
description = ""
authors = ["ph <robotnaoborot@gmail.com>"]
homepage = "https://github.com/pawnhearts/django_react_admin"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.10"
django = "^2.2"
django-filter = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
